# nestor

./: .gitignore  GUIDE.md  pyproject.toml
cli/: __init__.py  __main__.py  commands.py  config.py  main.py  printer.py  utils.py
live-telemetry/dataset_generation/: build_regression_dataset.py  collect_dataset.sh  dataset_config.sh  filter_ambiguous_labels.py  label_margins.py  merge_benchmark.py  prepare_workload.sh  set_scheduler.sh
live-telemetry/dataset_generation/workload_classifer_data/: collect_dataset.sh  prepare_workload.sh
live-telemetry/dataset_generation/workloads/: mixed_readheavy.fio  mixed_writeheavy.fio  randread.fio  randwrite.fio  seqread.fio  seqwrite.fio
live-telemetry/ebpf/: Makefile
live-telemetry/ebpf/include/: collector.h  vmlinux.h
live-telemetry/userspace/: loader.c  telemetry.c  telemetry.h
live_telemetry/: analyze_benchmarks.py
live_telemetry/dataset_generation/: dataset_config.sh  label_best_scheduler.py  run_workload.sh
live_telemetry/userspace/: collector.py  loader.c  telemetry.c  telemetry.h
ml/: analyze_dataset.py
ml/scheduler_recommend/: add_experiment_id.py  analyze_features.py  analyze_label_margins.py  analyze_pca.py  encode_dataset.py  feature_baseline.py  inspect_dataset.py  preprocess_dataset.py  train_model.py  train_regressor.py
ml/workload_classifier/: clean_dataset.py  eda.py  feature_importance.py  hueristics.py  predict.py  predictor.py  scheduler_mapping.py  shap_analysis.py  train_model.py
nestor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+2 files in other folders)
